syntax = "proto3";	// 指定proto版本

package simple;	    // 指定包名

// 定义 Simple 服务
service Simple {
    // 定义 SayTest 方法
    rpc SayTest(SimpleRequest) returns (SimpleReply) {}
}

// 请求结构
message SimpleRequest {
    int64 typeid = 1;
}

// 返回数据类型
message GetData {
    int64 id = 1;
    string name = 2;
}

// 响应结构
message SimpleReply {

	// repeated重复(数组)
	repeated GetData user_list = 1;

}